# UVKShaderCompiler

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp  spirv-cross
.github/: auto-issue-template.md
.github/workflows/: ci.yaml  release.yaml  update.yml
Source/: Functions.cpp  Functions.hpp
Src/: Core.hpp  Functions.cpp  Functions.hpp  OpenGL.hpp  Vulkan.cpp  Vulkan.hpp  main.cpp
src/: Vulkan.hpp
